<resources>
    <string name="app_name">PhoneShop</string>
    <string name="reg">Regisztráció</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="pass">Jelszó:</string>
    <string name="email">E-mail:</string>
    <string name="cim">Telefonos áruház</string>
    <string name="emailhint">valami@valami.hu</string>
    <string name="repass">Jelszó újra:</string>
    <string name="haveacc">Van már fiókom</string>
    <string name="name">Név:</string>
    <string name="add_cart">Kosárba</string>
    <string name="brand">brand</string>
    <string name="model">model</string>
</resources>