<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/productModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="9dp"
            android:padding="8dp"
            android:text="@string/model"
            android:textColor="?android:textColorSecondary"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/productBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productModel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:padding="8dp"
            android:text="@string/brand"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productBrand"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/add_cart" />

        <TextView
            android:id="@+id/productColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/itemImage"
            android:text="TextView"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/productStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productColor"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/itemImage"
            android:text="TextView"
            android:textSize="15dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>